<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_OrderId"
        android:id="@+id/textView1"
        android:textSize="16sp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_OrderId"
        android:id="@+id/tvOrderId"
        android:textSize="16sp"
        android:textColor="#ff0000ff"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/textView1"
        android:layout_toEndOf="@+id/textView1"
        android:layout_marginLeft="12dp"
        android:layout_marginStart="12dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_Customer"
        android:id="@+id/textView2"
        android:textSize="16sp"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/tvOrderId"
        android:layout_toEndOf="@+id/tvOrderId"
        android:layout_marginLeft="30dp"
        android:layout_marginStart="30dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_Customer"
        android:id="@+id/tvCustomer"
        android:textColor="#ff0000ff"
        android:textSize="16sp"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/textView2"
        android:layout_toEndOf="@+id/textView2"
        android:layout_marginLeft="12dp"
        android:layout_marginStart="12dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_Sum"
        android:id="@+id/textView3"
        android:textSize="16sp"
        android:layout_marginTop="12dp"
        android:layout_below="@+id/textView1"
        android:layout_alignRight="@+id/textView1" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_Sum"
        android:id="@+id/tvSum"
        android:textColor="#ff0000ff"
        android:textSize="16sp"
        android:layout_alignTop="@+id/textView3"
        android:layout_alignLeft="@+id/tvOrderId"
        android:layout_alignStart="@+id/tvOrderId" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_Date"
        android:id="@+id/textView4"
        android:textSize="16sp"
        android:layout_alignTop="@+id/tvSum"
        android:layout_alignRight="@+id/textView2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_Date"
        android:id="@+id/tvDate"
        android:textColor="#ff0000ff"
        android:textSize="16sp"
        android:layout_alignTop="@+id/textView4"
        android:layout_alignLeft="@+id/tvCustomer"
        android:layout_alignStart="@+id/tvCustomer" />


</RelativeLayout>
